# chroma

./: .gitignore  LICENSE  README.md  meson.build
shell/: shell.qml
shell/bar/: Bar.qml  Clock.qml  SystemTray.qml  WindowTitle.qml
shell/launcher/: Launcher.qml
shell/notifications/: NotificationDaemon.qml  NotificationPopup.qml
shell/theme/: AppState.qml  Theme.qml
shell/wallpaper/: Wallpaper.qml
src/: animation.hpp  app.cpp  app.hpp  canvas.cpp  canvas.hpp  config.cpp  config.hpp  focus.hpp  foreign_toplevel.cpp  foreign_toplevel.hpp  input.cpp  input.hpp  keys.hpp  layer_shell.cpp  layer_shell.hpp  magnetism.cpp  magnetism.hpp  main.cpp  renderer.cpp  renderer.hpp  seat.cpp  seat.hpp  server.cpp  server.hpp  spawn.cpp  spawn.hpp  stack.cpp  stack.hpp  types.hpp  window.hpp  xdg_handler.cpp  xdg_handler.hpp
src/compat/: README.md
src/compat/wlr/render/: color.h
src/compat/wlr/types/: wlr-layer-shell-unstable-v1-protocol.h  wlr-output-power-management-unstable-v1-protocol.h  wlr_input_method_v2.h  wlr_layer_shell_v1.h  wlr_output_power_management_v1.h  wlr_scene.h
tests/: test_canvas.cpp  test_common.hpp  test_focus.cpp  test_main.cpp  test_stack.cpp  test_types.cpp
